--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,6 +3,7 @@ backend:
   branch: master # Branch to update (optional; defaults to master)
 
 media_folder: 'static/images/uploads'
+public_folder: '/images/uploads'
 
 collections:
   - name: 'blog' # Used in routes, e.g., /admin/collections/blog
